--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <!--------------------------------------------- header ------------------------------------------------->
     <header>
-    <div class="box header-box header-flex">
+    <div class="container header-container header-flex">
         <nav class="header-flex">
             <a href="index.html" class="header-logo link">Web<span>Studio</span></a>
             <ul class="list header-list header-flex">
                 <li class="header-item">
-                    <a href="./index.html" class="page link">Студия</a>
+                    <a href="./index.html" class="link header-link page"><span class="header-item-underline"></span>Студия</a>
                 </li>
                 <li class="header-item">
                     <a href="./portfolio.html" class="header-link link">Портфолио</a>
@@ -30,12 +30,12 @@
         <address class="header-address-flex margin">
             <a href="mailto:info@devstudio.com" class="header-address link">
                 <svg class="header-address-svg">
-                    <use href="./images/header/sprite.svg#envelope"></use>
+                    <use href="./images/sprite.svg#envelope"></use>
                 </svg>
             info@devstudio.com</a>
             <a href="tel:+380961111111" class="header-address link">
                 <svg class="header-address-svg">
-                    <use href="./images/header/sprite.svg#smartphone"></use>
+                    <use href="./images/sprite.svg#smartphone"></use>
                 </svg>
             +38 096 111 11 11</a>
         </address>
@@ -44,32 +44,32 @@
     <main>
         <!----------------------------------------- hero ------------------------------------------------>
         <section class="hero" style="text-align: center;">
-            <div class="box hero-box">
+            <div class="container">
                 <h1 class="hero-title"> Эффективные решения <br> для вашего бизнеса </h1>
-                <button type="button" class="hero-btn">Заказать услугу</button>
+                <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         <!---------------------------------------------  advanteges --------------------------------------------->
         <section class="advantages">
-           <div class="box">
+           <div class="container">
                 <h2 hidden>Наши преимущества</h2>
                 <ul class="list advantages-flex">
                     <li class="advantages-item">
-                        <h3 class="advantages-title">Внимание к деталям</h3>
+                        <h3 class="advantages-item-title">Внимание к деталям</h3>
                         <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="advantages-item">
-                        <h3 class="advantages-title">Пунктуальность</h3>
+                        <h3 class="advantages-item-title">Пунктуальность</h3>
                         <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                     </li>
                     <li class="advantages-item">
-                        <h3 class="advantages-title">Планирование</h3>
+                        <h3 class="advantages-item-title">Планирование</h3>
                         <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.
                         </p>
                     </li>
                     <li class="advantages-item">
-                        <h3 class="advantages-title">Современные технологии</h3>
+                        <h3 class="advantages-item-title">Современные технологии</h3>
                         <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
@@ -77,7 +77,7 @@
         </section>
         <!--------------------------------------------- doing ----------------------------------------------->
         <section class="doing">
-           <div class="box doing-box">
+           <div class="container">
                 <h2 class="doing-title">Чем мы занимаемся</h2>
                 <ul class="list doing-flex">
                     <li class="doing-item">
@@ -94,7 +94,7 @@
         </section>
         <!------------------------------------------------- team -------------------------------------------->
         <section class="team">
-            <div class="box team-box">
+            <div class="container">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-item">
@@ -105,28 +105,28 @@
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#instagram"></use>
+                                        <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#twitter"></use>
+                                        <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#facebook"></use>
+                                        <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#linkedin"></use>
+                                        <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -140,28 +140,28 @@
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#instagram"></use>
+                                        <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#twitter"></use>
+                                        <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#facebook"></use>
+                                        <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#linkedin"></use>
+                                        <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -175,28 +175,28 @@
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#instagram"></use>
+                                        <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#twitter"></use>
+                                        <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#facebook"></use>
+                                        <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#linkedin"></use>
+                                        <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -210,28 +210,28 @@
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#instagram"></use>
+                                        <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#twitter"></use>
+                                        <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#facebook"></use>
+                                        <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a class="team-link">
                                     <svg class="team-svg">
-                                        <use href="./images/studio/team/sprite.svg#linkedin"></use>
+                                        <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -240,49 +240,49 @@
                 </ul>
             </div>
         </section>
-        <section class="clients box">
+        <section class="clients container">
            <div>
                 <h2 class="clients-title">Постоянные клиенты</h2>
                 <ul class="clients-list list">
                     <li class="clients-item">
                         <a class="clients-link">
                             <svg class="clients-svg">
-                                <use href="./images/studio/clients/sprite.svg#logo-1" class="link"> </use>
+                                <use href="./images/sprite.svg#logo-1" class="link"> </use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link">
                             <svg class="clients-svg">
-                                <use href="./images/studio/clients/sprite.svg#logo-2" class="link"> </use>
+                                <use href="./images/sprite.svg#logo-2" class="link"> </use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link">
                             <svg class="clients-svg">
-                                <use href="./images/studio/clients/sprite.svg#logo-3" class="link"> </use>
+                                <use href="./images/sprite.svg#logo-3" class="link"> </use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link">
                             <svg class="clients-svg">
-                                <use href="./images/studio/clients/sprite.svg#logo-4" class="link"> </use>
+                                <use href="./images/sprite.svg#logo-4" class="link"> </use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link">
                             <svg class="clients-svg">
-                                <use href="./images/studio/clients/sprite.svg#logo-5" class="link"> </use>
+                                <use href="./images/sprite.svg#logo-5" class="link"> </use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link">
                             <svg class="clients-svg">
-                                <use href="./images/studio/clients/sprite.svg#logo-6" class="link"> </use>
+                                <use href="./images/sprite.svg#logo-6" class="link"> </use>
                             </svg>
                         </a>
                     </li>
@@ -292,8 +292,8 @@
     </main>
     <!------------------------------------------------------- footer ----------------------------------------------->
     <footer>
-        <div class="footer-flex box">
-            <div class="address-box">
+        <div class="footer-flex container">
+            <div class="address-container">
                  <a href="index.html" class="footer-logo link">Web<span>Studio</span></a>
                  <address class="address-flex">
                      <a href="https://goo.gl/maps/Dk4rDZdeURu579xs7" target="_blank" class="address link"> г. Киев, пр-т Леси
@@ -308,29 +308,29 @@
                 <ul class="list join-list">
                     <li class="join-item">
                         <a class="join-link">
-                            <svg class="join-icons">
-                                <use href="./images/footer/sprite.svg#instagram"></use>
+                            <svg class="join-svg">
+                                <use href="./images/sprite.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
                         <a class="join-link">
-                            <svg class="join-icons">
-                                <use href="./images/footer/sprite.svg#twitter"></use>
+                            <svg class="join-svg">
+                                <use href="./images/sprite.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
                         <a class="join-link">
-                            <svg class="join-icons">
-                                <use href="./images/footer/sprite.svg#facebook"></use>
+                            <svg class="join-svg">
+                                <use href="./images/sprite.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
                         <a class="join-link">
-                            <svg class="join-icons">
-                                <use href="./images/footer/sprite.svg#linkedin"></use>
+                            <svg class="join-svg">
+                                <use href="./images/sprite.svg#linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -338,5 +338,16 @@
             </div>
         </div>
     </footer>
+    <!--------------------------------- hero backdrop ------------------------------->
+    <div class="hero-backdrop is-hidden" data-modal>
+        <div class="hero-modal">
+            <button type="button" class="hero-modal-btn" data-modal-close>
+                <svg class="hero-modal-btn-svg">
+                    <use href="./images/sprite.svg#close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
