--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
     <!--------------------------------------------- header ------------------------------------------------->
 <header>
-    <div class="box header-box header-flex">
+    <div class="container header-container header-flex">
         <nav class="header-flex">
             <a href="index.html" class="header-logo link">Web<span>Studio</span></a>
             <ul class="list header-list header-flex">
@@ -27,15 +27,17 @@
                 </li>
             </ul>
         </nav>
-        <address class="header-flex margin">
-            <svg class="header-address-svg">
-                <use href="./images/header/sprite.svg#envelope"></use>
-            </svg>
-            <a href="mailto:info@devstudio.com" class="header-address link">info@devstudio.com</a>
-            <svg class="header-address-svg">
-                <use href="./images/header/sprite.svg#smartphone"></use>
-            </svg>
-            <a href="tel:+380961111111" class="header-address link">+38 096 111 11 11</a>
+        <address class="header-address-flex margin">
+            <a href="mailto:info@devstudio.com" class="header-address link">
+                <svg class="header-address-svg">
+                    <use href="./images/sprite.svg#envelope"></use>
+                </svg>
+                info@devstudio.com</a>
+            <a href="tel:+380961111111" class="header-address link">
+                <svg class="header-address-svg">
+                    <use href="./images/sprite.svg#smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a>
         </address>
     </div>
 </header>
@@ -43,20 +45,20 @@
         <!------------------------------- portfolio ------------------------------------->
         <section class="portfolio">
         <!------------------------------- filters ------------------------------------->
-          <div class="box filters-box">
+          <div class="container">
             <h1 hidden>portfolio</h1>
             <ul class="list filters-list">
                 <li class="filters-item">
-                    <button type="button" class="filters-btn all-btn">Все</button>
+                    <button type="button" class="filters-btn">Все</button>
                 </li>
                 <li class="filters-item">
-                    <button type="button" class="filters-btn websites-btn">Веб-сайты</button>
+                    <button type="button" class="filters-btn">Веб-сайты</button>
                 </li>
                 <li class="filters-item">
-                    <button type="button" class="filters-btn apps">Приложения</button>
+                    <button type="button" class="filters-btn">Приложения</button>
                 </li>
                 <li class="filters-item">
-                    <button type="button" class="filters-btn design">Дизайн</button>
+                    <button type="button" class="filters-btn">Дизайн</button>
                 </li>
                 <li class="filters-item">
                     <button type="button" class="filters-btn">Маркетинг</button>
@@ -65,7 +67,9 @@
             <!------------------------------------ projects ---------------------------------------->
             <ul class="list projects">
                 <li class="projects-item">
-                    <img class="projects-img" src="./images/portfolio/img-1.jpg" alt="Открытый MacBook" width="370" height="294">
+                    <div class="projects-opacity">
+                        <img class="projects-img" src="./images/portfolio/img-1.jpg" alt="Открытый MacBook" width="370" height="294">
+                    </div>
                     <div class="group">
                         <h2 class="title">Технокряк</h2>
                         <p class="text">Веб-сайт</p>
@@ -132,8 +136,8 @@
         </section>
         <!------------------------------------------------------- footer ----------------------------------------------->
     <footer>
-        <div class="footer-flex box">
-            <div class="address-box">
+        <div class="footer-flex container">
+            <div class="address-container">
                 <a href="index.html" class="footer-logo link">Web<span>Studio</span></a>
                 <address class="address-flex">
                     <a href="https://goo.gl/maps/Dk4rDZdeURu579xs7" target="_blank" class="address link"> г. Киев, пр-т Леси
@@ -148,29 +152,29 @@
                 <ul class="list join-list">
                     <li class="join-item">
                         <a class="join-link">
-                            <svg class="join-icons">
-                                <use href="./images/footer/sprite.svg#instagram"></use>
+                            <svg class="join-svg">
+                                <use href="./images/sprite.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
                         <a class="join-link">
-                            <svg class="join-icons">
-                                <use href="./images/footer/sprite.svg#twitter"></use>
+                            <svg class="join-svg">
+                                <use href="./images/sprite.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
                         <a class="join-link">
-                            <svg class="join-icons">
-                                <use href="./images/footer/sprite.svg#facebook"></use>
+                            <svg class="join-svg">
+                                <use href="./images/sprite.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
                         <a class="join-link">
-                            <svg class="join-icons">
-                                <use href="./images/footer/sprite.svg#linkedin"></use>
+                            <svg class="join-svg">
+                                <use href="./images/sprite.svg#linkedin"></use>
                             </svg>
                         </a>
                     </li>
