--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                     <a href="./index.html" class="header-link link">Студия</a>
                 </li>
                 <li class="header-item">
-                    <a href="./portfolio.html" class="page link">Портфолио</a>
+                    <a href="./portfolio.html" class="page link header-link"><span class="header-item-underline"></span>Портфолио</a>
                 </li>
                 <li class="header-item">
                     <a href="#" class="header-link link">Контакты</a>
@@ -68,6 +68,8 @@
             <ul class="list projects">
                 <li class="projects-item">
                     <div class="projects-opacity">
+                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
                         <img class="projects-img" src="./images/portfolio/img-1.jpg" alt="Открытый MacBook" width="370" height="294">
                     </div>
                     <div class="group">
@@ -76,56 +78,88 @@
                     </div>
                 </li>
                 <li class="projects-item">
-                    <img class="projects-img" src="./images/portfolio/img-2.jpg" alt="2 баскетболиста с мячом" width="370" height="294">
+                    <div class="projects-opacity">
+                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                        <img class="projects-img" src="./images/portfolio/img-2.jpg" alt="2 баскетболиста с мячом" width="370" height="294">
+                    </div>
                     <div class="group">
                         <h2 class="title">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
                         <p class="text">Дизайн</p>
                     </div>
                 </li>
                 <li class="projects-item">
-                    <img class="projects-img" src="./images/portfolio/img-3.jpg" alt="логотип ресторана Seafood" width="370" height="294">
+                    <div class="projects-opacity">
+                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                        <img class="projects-img" src="./images/portfolio/img-3.jpg" alt="логотип ресторана Seafood" width="370" height="294">
+                    </div>
                     <div class="group">
                         <h2 class="title">Ресторан <span lang="en"> Seafood</span></h2>
                         <p class="text">Приложение</p>
                     </div>
                 </li>
                 <li class="projects-item">
-                    <img class="projects-img" src="./images/portfolio/img-4.jpg" alt="чёрные наушники" width="370" height="294">
+                    <div class="projects-opacity">
+                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                        <img class="projects-img" src="./images/portfolio/img-4.jpg" alt="чёрные наушники" width="370" height="294">
+                    </div>
                     <div class="group">
                         <h2 class="title">Проект<span lang="en"> Prime</span></h2>
                         <p class="text">Маркетинг</p>
                     </div>
                 </li>
                 <li class="projects-item">
-                    <img class="projects-img" src="./images/portfolio/img-5.jpg" alt="2 маленькие коробки" width="370" height="294">
-                    <div class="group">
+                    <div class="projects-opacity">
+                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                        <img class="projects-img" src="./images/portfolio/img-5.jpg" alt="2 маленькие коробки" width="370" height="294">
+                    </div>
+                        <div class="group">
                         <h2 class="title">Проект <span lang="en"> Boxes</span></h2>
                         <p class="text">Приложение</p>
                     </div>
                 </li>
                 <li class="projects-item">
-                    <img class="projects-img" src="./images/portfolio/img-6.jpg" alt="iMac" width="370" height="294">
+                    <div class="projects-opacity">
+                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                        <img class="projects-img" src="./images/portfolio/img-6.jpg" alt="iMac" width="370" height="294">
+                    </div>
                     <div class="group">
-                        <h2 class="title" lang="en"> Inspiration has no Borders</h2>
-                        <p class="text">Веб-сайт</p>
+                    <h2 class="title" lang="en"> Inspiration has no Borders</h2>
+                    <p class="text">Веб-сайт</p>
                     </div>
                 </li>
                 <li class="projects-item">
-                    <img class="projects-img" src="./images/portfolio/img-7.jpg" alt="открытая книга" width="370" height="294">
+                    <div class="projects-opacity">
+                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                        <img class="projects-img" src="./images/portfolio/img-7.jpg" alt="открытая книга" width="370" height="294">
+                    </div>
                     <div class="group">
                         <h2 class="title">Издание<span lang="en"> Limited Edition</span></h2>
                         <p class="text">Дизайн</p>
                     </div>
                 </li>
                 <li class="projects-item">
-                    <img class="projects-img" src="./images/portfolio/img-8.jpg" alt="логотип LAB EL TAG" width="370" height="294">
+                    <div class="projects-opacity">
+                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                        <img class="projects-img" src="./images/portfolio/img-8.jpg" alt="логотип LAB EL TAG" width="370" height="294">
+                    </div>
                     <div class="group">
                         <h2 class="title">Проект<span lang="en"> LAB</span></h2>
                         <p class="text">Маркетинг</p>
                     </div>
                 </li>
                 <li class="projects-item">
-                    <img class="projects-img" src="./images/portfolio/img-9.jpg" alt="руки на клавиатуре ноутбука">
+                    <div class="projects-opacity">
+                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                        <img class="projects-img" src="./images/portfolio/img-9.jpg" alt="руки на клавиатуре ноутбука">
+                    </div>
                     <div class="group">
                         <h2 class="title" lang="en">Growing Business</h2>
                         <p class="text">Приложение</p>
