--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                     <a href="./index.html" class="header-link link">Студия</a>
                 </li>
                 <li class="header-item">
-                    <a href="./portfolio.html" class="page link header-link"><span class="header-item-underline"></span>Портфолио</a>
+                    <a href="./portfolio.html" class="page link header-link">Портфолио</a>
                 </li>
                 <li class="header-item">
                     <a href="#" class="header-link link">Контакты</a>
@@ -68,7 +68,7 @@
             <ul class="list projects">
                 <li class="projects-item">
                     <div class="projects-opacity">
-                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        <p class="projects-transform-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
                         <img class="projects-img" src="./images/portfolio/img-1.jpg" alt="Открытый MacBook" width="370" height="294">
                     </div>
@@ -79,7 +79,7 @@
                 </li>
                 <li class="projects-item">
                     <div class="projects-opacity">
-                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        <p class="projects-transform-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                         <img class="projects-img" src="./images/portfolio/img-2.jpg" alt="2 баскетболиста с мячом" width="370" height="294">
                     </div>
@@ -90,7 +90,7 @@
                 </li>
                 <li class="projects-item">
                     <div class="projects-opacity">
-                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        <p class="projects-transform-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                         <img class="projects-img" src="./images/portfolio/img-3.jpg" alt="логотип ресторана Seafood" width="370" height="294">
                     </div>
@@ -101,7 +101,7 @@
                 </li>
                 <li class="projects-item">
                     <div class="projects-opacity">
-                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        <p class="projects-transform-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                         <img class="projects-img" src="./images/portfolio/img-4.jpg" alt="чёрные наушники" width="370" height="294">
                     </div>
@@ -112,7 +112,7 @@
                 </li>
                 <li class="projects-item">
                     <div class="projects-opacity">
-                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        <p class="projects-transform-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                         <img class="projects-img" src="./images/portfolio/img-5.jpg" alt="2 маленькие коробки" width="370" height="294">
                     </div>
@@ -123,7 +123,7 @@
                 </li>
                 <li class="projects-item">
                     <div class="projects-opacity">
-                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        <p class="projects-transform-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                         <img class="projects-img" src="./images/portfolio/img-6.jpg" alt="iMac" width="370" height="294">
                     </div>
@@ -134,7 +134,7 @@
                 </li>
                 <li class="projects-item">
                     <div class="projects-opacity">
-                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        <p class="projects-transform-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                         <img class="projects-img" src="./images/portfolio/img-7.jpg" alt="открытая книга" width="370" height="294">
                     </div>
@@ -145,7 +145,7 @@
                 </li>
                 <li class="projects-item">
                     <div class="projects-opacity">
-                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        <p class="projects-transform-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                         <img class="projects-img" src="./images/portfolio/img-8.jpg" alt="логотип LAB EL TAG" width="370" height="294">
                     </div>
@@ -156,7 +156,7 @@
                 </li>
                 <li class="projects-item">
                     <div class="projects-opacity">
-                        <p class="projects-hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        <p class="projects-transform-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                         <img class="projects-img" src="./images/portfolio/img-9.jpg" alt="руки на клавиатуре ноутбука">
                     </div>
